<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="20dp"

    >

    <ImageView
        android:id="@+id/nav_profilePic"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_account_circle_white"


        />

    <TextView
        android:id="@+id/nav_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/default_username"
        android:textColor="@color/textColor"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:id="@+id/nav_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="1sp"
            android:text="@string/default_college"
            android:textColor="@color/textColor"
            android:layout_weight="1"
            android:visibility="gone"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/nav_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1sp"
            android:gravity="center"
            android:text="@string/default_preference"
            android:textColor="@color/textColor"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>



</LinearLayout>