<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/createAccTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nova_square"
        android:text="@string/log_in"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/passTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passTv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword" />

    <android.support.design.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/log_in"
        android:textColor="@color/textColor" />

    <android.support.design.button.MaterialButton
        android:id="@+id/resetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="Reset Password"
        android:textColor="@color/textColor" />


</RelativeLayout>