<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/createAccTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nova_square"
                android:text="@string/create_account"
                android:textSize="40sp" />


            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="100dp"
                android:text="@string/name"
                android:textSize="20sp" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="30dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="30dp"
                android:inputType="textEmailAddress" />


            <TextView
                android:id="@+id/passTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passTv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="30dp"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/addrTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pass"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addrTv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:inputType="text"
                android:layout_marginTop="5sp"
                android:layout_marginRight="30dp" />

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addr"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="Phone No"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5sp"
                android:maxLength="10"
                android:layout_marginRight="30dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/deptTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="Department"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/dept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/deptTv"
                android:layout_centerHorizontal="true"
                android:hint="Choose one..."
                android:layout_marginLeft="30dp"
                android:focusableInTouchMode="false"
                android:editable="false"
                android:layout_marginTop="5sp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"

                android:layout_marginRight="30dp" />

            <TextView
                android:id="@+id/colgTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dept"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="College"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/colg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/colgTv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:editable="false"
                android:hint="Choose one..."

                android:focusableInTouchMode="false"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="30dp" />


            <android.support.design.button.MaterialButton
                android:id="@+id/createAccButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/colg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textColor="@color/textColor" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>